Working on CC-65

--- a/Nicole/ConcentrationAndpH/Concentration_and _pH.ipynb
+++ b/Nicole/ConcentrationAndpH/Concentration_and _pH.ipynb
@@ -232,7 +232,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a663af16aca4a5ba5a7f7c3bf85e4bd",
+       "model_id": "aa1b7b8ccb214bfe8494a49f3f353356",
        "version_major": 2,
        "version_minor": 0
       },
@@ -252,11 +252,20 @@
        "</p>\n"
       ],
       "text/plain": [
-       "SelectMultiple(description='Substances', options=('Vinegar', 'Tums/Antacids', 'Pure Water', 'Tomatoes', 'Soap'), value=())"
+       "SelectMultiple(description='Substances', index=(0, 3), options=('Vinegar', 'Tums/Antacids', 'Pure Water', 'Tomatoes', 'Soap'), value=('Vinegar', 'Tomatoes'))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Awesome! You found the acids!\n",
+      "Vinegar has acetic acid in it, making it sour.\n",
+      "Tomatoes have citric acid in them, also making them a little sour.\n"
+     ]
     }
    ],
    "source": [
@@ -313,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "454f62566fcb4296814b76f9faf7befb",
+       "model_id": "dceca8b869624eb4843347350c53f5d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -392,7 +401,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a0a32b275074944a93e4cf1c8c8c4e5",
+       "model_id": "059eb09fe9524ce89aca3da7b96af9b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,11 +421,18 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(options=('', 'An acid', 'A base', 'Neutral'), value='')"
+       "RadioButtons(index=2, options=('', 'An acid', 'A base', 'Neutral'), value='A base')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That's not right, remember what the definitions of acids and bases are.\n"
+     ]
     }
    ],
    "source": [
@@ -456,7 +472,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82b9c3754cc64f9087251e4ef11b0ddb",
+       "model_id": "25b0eda692bd42cb971c3d3a6c36d277",
        "version_major": 2,
        "version_minor": 0
       },
@@ -553,7 +569,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39f86540e1fe47cb8ba1bdd228cd279d",
+       "model_id": "47a7b676edda44a8b99d57725fe46984",
        "version_major": 2,
        "version_minor": 0
       },
@@ -637,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +732,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0058bbca5f8a4120a009e67730257e25",
+       "model_id": "368346a5bed64b3083969fc2b7b0f49d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -781,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +887,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f253da890924aa58e6556f1f6a07dbc",
+       "model_id": "dfee9647b6d64d11b0c1f031c2316648",
        "version_major": 2,
        "version_minor": 0
       },
