almost done cc 65

--- a/Nicole/AreaNotebooks/Triangle_Area.ipynb
+++ b/Nicole/AreaNotebooks/Triangle_Area.ipynb
@@ -67,42 +67,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "            require.config({\n",
-       "                paths: {\n",
-       "                    ggb: \"https://cdn.geogebra.org/apps/deployggb\"\n",
-       "                }\n",
-       "            });\n",
-       "\n",
-       "            require([\"ggb\"]);\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from ggb import *\n",
-    "ggb = GGB()\n",
-    "\n",
-    "from IPython.display import Image\n",
-    "\n",
-    "import ipywidgets as widgets\n",
-    "import IPython"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -149,6 +113,60 @@
     "So we can see that no matter what kind of triangle you're faced with, as long as we know the base and the height, the area of the triangle will be $$\\frac{ base \\times height}{2}$$\n",
     "\n",
     "We are going to write base as b and height as h in the practice questions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting geogebra from git+git://github.com/callysto/nbplus.git#egg=geogebra&subdirectory=geogebra\n",
+      "  Cloning git://github.com/callysto/nbplus.git to /tmp/pip-install-o1cuxeva/geogebra\n",
+      "Building wheels for collected packages: geogebra\n",
+      "  Running setup.py bdist_wheel for geogebra ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /tmp/pip-ephem-wheel-cache-6s86n6xi/wheels/cd/8f/54/42a9349ed6e488bb120c4c182ad6aa4f19e86061fe875bf3c5\n",
+      "Successfully built geogebra\n",
+      "Installing collected packages: geogebra\n",
+      "  Found existing installation: geogebra 0.0.0\n",
+      "    Uninstalling geogebra-0.0.0:\n",
+      "      Successfully uninstalled geogebra-0.0.0\n",
+      "Successfully installed geogebra-0.0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install --upgrade --force-reinstall --user git+git://github.com/callysto/nbplus.git#egg=geogebra\\&subdirectory=geogebra "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'GGB' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-34c2f30dd088>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgeogebra\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mggb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGGB\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'GGB' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from geogebra import *\n",
+    "ggb = GGB()\n",
+    "\n",
+    "from IPython.display import Image\n",
+    "\n",
+    "import ipywidgets as widgets\n",
+    "import IPython"
    ]
   },
   {
