--- a/Vincent/CC-193 Geometry Basics 5/GeometryBasics5.ipynb
+++ b/Vincent/CC-193 Geometry Basics 5/GeometryBasics5.ipynb
@@ -170,12 +170,34 @@
    "metadata": {},
    "source": [
     "# Reading Time\n",
+    "\n",
+    "Long ago before electricity was invented, ancient civilizations had to find other cleaver ways of reading time. Two common techniques used where:\n",
+    "1. Using the position of the sun to know the time of day\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/6/66/Sundial_-_Canonical_Hour.jpg\" width=\"400\" style=\"box-shadow: 4px 4px 12px gray;margin: 5px;\">\n",
+    "2. Studying the position of the stars was used to know time in the night\n",
+    "<img src=\"https://c.tadst.com/gfx/750x500/tell-time-with-stars.png?1\" width=\"400\" style=\"box-shadow: 4px 4px 12px gray;margin: 5px;\">\n",
+    "\n",
+    "Now days the time is everywhere and is easily accessible. The main two ways of displaying time are using a digital clock or analog. Digital represents the time as numbers, an analog clock represents the time using clock hands going in circle."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"hideMe\">\n",
+    "\n",
     "These days the time is everywhere. We simply look for a clock on a wall, appliance, a watch, or our phones. This was not always the case though. Does this mean time did not exist long ago? Egyptians 1500 BC (roughly 3500 years ago) were very much aware of time and found very clever ways for measuring it. For these ancient civilizations, as for us, knowing the time and months of the year was crucial to their survival. It turns out the most important clocks of all where not found on earth but in the sky! The stars and sun have been used to measure time for thousands of years and by many civilizations. Using the position of the sun casting shadows was used during the day and the position of known constellations were used at night. \n",
     "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/6/66/Sundial_-_Canonical_Hour.jpg\" width=\"400\">\n",
-    "<img src=\"https://c.tadst.com/gfx/750x500/tell-time-with-stars.png?1\" width=\"400\">\n",
-    "\n",
     "Luckily for us we have evolved far beyond using the sun and stars to tell time. Imagine trying to get to school on time on a cloudy day! Now when we get a new watch or clock we simply synchronize it to match another time piece showing the correct time. More and more, as devices are connected to the internet we don’t even have to set the time, it is done automatically!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%toggleMore"
    ]
   },
   {
@@ -191,9 +213,9 @@
     "- 1 minutes is made up of 60 seconds\n",
     "- 1 second is made up of 1000 milliseconds\n",
     "\n",
-    "We could keep going but already 1 millisecond happens so fast that they are rarly used in everyday life.\n",
+    "We could keep going but already 1 millisecond happens so fast that they are rarely used in everyday life.\n",
     "\n",
-    "Let's visualize this by using an analogue clock. If you count all the ticks around the clock you will find out that there are 60 of them. This makes sense, as 1 one hour is made up of 60 minutes and 1 minute is made up of 60 seconds. In everyday life we know a clock only ever goes forward, and some might say it moves relatively slow. This can make it hard to fully understand its pattern. This example breaks these rules and allows you to manipulate the clock forward and backwards, fast or slow. \n",
+    "Let's visualize this by using an analog clock. If you count all the ticks around the clock you will find out that there are 60 of them. This makes sense, as 1 one hour is made up of 60 minutes and 1 minute is made up of 60 seconds. In everyday life we know a clock only ever goes forward, and some might say it moves relatively slow. This can make it hard to fully understand its pattern. This example breaks these rules and allows you to manipulate the clock forward and backwards, fast or slow. \n",
     "\n",
     "If you adjust the slider below the clock you will see that the hands will begin to move. Each tick on the slider represents a second. Try adjusting the time to see how each hand behaves. (You can also use your keyboard's side arrows to tick through 1 second at a time)"
    ]
@@ -337,7 +359,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What have you noticed about the relationships between the hands as you slide back and forth? Have you noticed that in order for the minute hand (blue) to move one full tick the seconds hand (red) must do one full rotation? You may also have noticed that the hour hand (black) moves very slowly compared to the other hands but it seems to go past more then 1 tick before the minute hand has done a full rotation. That is because a day has 24 hours, not 60 hours. Remember earlier when we talked about AM and PM, the 24 hour day was broken down into two 12 hour sections. So we can see that if we divide a full rotation (60 minutes) into 12 hours we get $$60\\div12=5$$ This means in the time the minute hand does a full rotation, meaning 60 minutes, the hour hand will advance 5 ticks on the clock. You will see this happening if you slide the slider from the far left all the way to the far right, the minute hand will have done a full rotation and the hour hand will have moved 5 ticks. \n",
+    "What have you noticed about the relationships between the hands as you slide back and forth? \n",
+    "Two important things to notice about the clock:\n",
+    "1. In order for the minute hand (blue) to move one full tick the seconds hand (red) must do one full rotation\n",
+    "2. When the minute hand does a full rotation the hour hand will have moved 5 ticks\n",
+    "\n",
+    "Why does the hour hand move 5 ticks per minute rotation? That is because a day has 24 hours, not 60 hours. Remember earlier when we talked about AM and PM, the 24 hour day was broken down into two 12 hour sections. So we can see that if we divide a full rotation (60 minutes) into 12 hours we get $$60\\div12=5$$ This means in the time the minute hand does a full rotation, meaning 60 minutes, the hour hand will advance 5 ticks on the clock. You will see this happening if you slide the slider from the far left all the way to the far right, the minute hand will have done a full rotation and the hour hand will have moved 5 ticks. \n",
     "\n",
     "Now that we have a better understanding of the relationships between the units, can we figure out how many seconds are in 1 hour? Sure we can! Let's think about this. In 1 hour the minute hand goes around 60 times and for each one of these minutes the seconds hand goes around 60 times, this must mean $$60_\\frac{min}{hr} \\times60_\\frac{sec}{min}=3600_\\frac{sec}{hr}$$ So 1 hour has 3600 seconds. This means if you use your keyboard arrows on the slider from left to right you will need to push it 3600 times!! (Don't do that.)\n",
     "\n",
@@ -349,14 +376,22 @@
    "metadata": {},
    "source": [
     "## Measuring Time\n",
-    "So as we all know being able to tell the time is a crucial part of our everyday lives. It helps us know when we have appointments, when we should eat or when we should go to sleep. Time also has many other great uses like keeping time for a hockey game or measuring how long it takes to drive from one city to another. Let's take travelling from city to another as an example. Say you are going from Calgary to Edmonton and you want to calculate how long the trip takes. The simplest way of doing this without extra tools is to write down the time when you leave and then check the time when you arrive. Now all we do is take the difference between these two times. Let's say you leave at 1:32 and arrive at 4:47. You can probably estimate in your head that the trip took a little over 3 hours, but we can calculate it exactly. To make this simpler we will convert the format from hours:minutes to just have minutes. Let's recall how many minutes are in 1 hour to get the following: \n",
+    "So as we all know being able to tell the time is a crucial part of our everyday lives. It helps us know when we have appointments, when we should eat or when we should go to sleep. \n",
+    "\n",
+    "Time also has many other great uses like keeping time for a hockey game or measuring how long it takes to drive from one city to another. \n",
+    "\n",
+    "Let's take travelling from city to another as an example. Say you are going from Calgary to Edmonton and you want to calculate how long the trip takes. The simplest way of doing this without extra tools is to write down the time when you leave and then check the time when you arrive. Now all we do is take the difference between these two times.\n",
+    "\n",
+    "Let's say you leave at 1:32 and arrive at 4:47. You can probably estimate in your head that the trip took a little over 3 hours, but we can calculate it exactly. To make this simpler we will convert the format from hours:minutes to just have minutes. Let's recall how many minutes are in 1 hour to get the following: \n",
     "$$(1_{hr}\\times60_\\frac{min}{hr})+32_{min}=60_{min} + 32_{min}=92_{min}$$ \n",
     "$$(4_{hr}\\times60_\\frac{min}{hr})+47_{min}=240_{min} + 47_{min}=287_{min}$$ \n",
+    "\n",
+    "*Notice these times in minutes actually mean 92 min and 287 min past noon respectivly*\n",
     "\n",
     "And now we get the difference: \n",
     "$$287_{min}-92_{min}=195_{min}$$ \n",
     "\n",
-    "So the trip took 195 minutes to get from Calgary to Edmonton. To get it back into the hours:minutes format we need to figure out how many times $195$ can be divided by $60$. We can see that $60$ will fit $3$ times inside $195$ and we will be left with a remainder of $15$, so the trip took 3 hours and 15 minutes.\n",
+    "So the trip took 195 minutes to get from Calgary to Edmonton. To get it back into the hours:minutes format we need to figure out how many times $195$ can be divided by $60$. We can see that $60$ will fit $3$ times inside $195$ and we will be left with a remainder of $15$, so the trip took $3$ hours and $15$ minutes.\n",
     "\n",
     "Ok so that wasn't too bad. It took some work to get an exact value but it is definitely doable. Now let's take our hockey example and look at how we could keep track of the time for the game. A few things to consider before attempting this \n",
     "1. The time goes backwards from 20 minutes down to 0 milliseconds\n",
@@ -364,12 +399,27 @@
     "3. The time has to be accurate to the 100th millisecond\n",
     "\n",
     "Analyzing this problem we can quickly see that if all we have is a regular clock then a hockey game would take a very long time between each whistle blown as someone would have to calculate the differences in time between each stop and start. Thankfully we have many different types of tools to measure times like this. In this case a scoreboard with a timeclock built in does the trick. \n",
-    "<img src=\"http://www.fair-play.com/wp-content/photos-drawings/HK-1600-4.jpg\" width=\"600\">\n",
-    "Now all the time keeper has to do is stop and start time as the whistle is blown and the play starts again.\n",
-    "\n",
-    "In other sports sometimes a fraction of a second makes the difference between first and second place. Precise measurements of time are may also be needed during a critical science experiment. With examples like these we can see that a person's reflex to start/stop a clock is probably not going to cut it. Many other techniques have been developed to overcome these challenges. Laser sensors are far more accurate then the human hand-to-eye coordination. \n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/c/c0/LightBeamTiming.jpg/220px-LightBeamTiming.jpg\">\n",
+    "<img src=\"http://www.fair-play.com/wp-content/photos-drawings/HK-1600-4.jpg\" width=\"600\" style=\"box-shadow: 4px 4px 12px gray;\">\n",
+    "Now all the time keeper has to do is stop and start time as the whistle is blown and the play starts again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"hideMe\">\n",
+    "In other sports sometimes a fraction of a second makes the difference between first and second place. Precise measurements of time may also be needed during a critical science experiment. With examples like these we can see that a person's reflex to start/stop a clock is probably not going to cut it. Many other techniques have been developed to overcome these challenges. Laser sensors are far more accurate then the human hand-to-eye coordination. \n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/c/c0/LightBeamTiming.jpg/220px-LightBeamTiming.jpg\" style=\"box-shadow: 4px 4px 12px gray;\">\n",
     "The image above is of a light beam sensor used on the Olympic track."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%toggleMore"
    ]
   },
   {
@@ -377,9 +427,13 @@
    "metadata": {},
    "source": [
     "## 24-Hour Clock\n",
-    "As we now know a day has 24 hours. We also know why AM and PM were introduced and still used today. Another wildly popular way of representing time is to use the 24 hour clock. This means we no longer need to us AM and PM. Using the 24 hour clock simply means we don't go back to one after we pass noon, we keep going from 12 to 13. This may seem odd at first since saying it is 13 o'clock is not something we are use to. One major benefit to using this format is that you will never set your alarm wrong by putting 8PM instead of 8AM; 8 just means 8 in the morning and 20 means 8 at night. \n",
+    "As we now know a day has 24 hours. We also know why AM and PM were introduced and still used today. Another wildly popular way of representing time is to use the 24-hour clock. The 24-hour clock eliminates the need to us AM and PM. Using the 24-hour clock simply means we don't go back to one after we pass noon, we keep going from 12 to 13. This may seem odd at first since saying it is 13 o'clock is not something we are use to. \n",
     "\n",
-    "If you use this format enough, knowing that 16:03 actually means 4:03pm becomes second nature, but you're probably wondering how to quickly get this answer when you are not used to it yet. All you have to do is take the hour $16$ and subtract $12$ from it so $$16-12=4\\text{ o'clock PM.}$$ A good way to quickly do this in your head is to first take away $10$ which is easy to do then remove the last $2$, so $$16-10=6,$$ and then $$6-2=4\\text{ o'clock.}$$ Give this a try: what time is 18:39? How about 22:18?\n",
+    "One major benefit to using this format is that you will never set your alarm wrong by putting 8PM instead of 8AM; 8 just means 8 in the morning and 20 means 8 at night. \n",
+    "\n",
+    "If you use this format enough, knowing that 16:03 simply means 4:03pm becomes second nature, but you're probably wondering how to quickly get this answer when you are not used to it yet. \n",
+    "\n",
+    "All you have to do is take the hour $16$ and subtract $12$ from it so $$16-12=4\\text{ o'clock PM.}$$ A good way to quickly do this in your head is to first take away $10$ which is easy to do then remove the last $2$, so $$16-10=6,$$ and then $$6-2=4\\text{ o'clock.}$$ Give this a try: what time is 18:39? How about 22:18?\n",
     "\n",
     "Many modern watches, smartphones, alarm clocks, etc. allow you to use the 24 hour clock. Try it out for a week or two and see how fast you adjust to this format."
    ]
@@ -739,6 +793,18 @@
     "        }\n",
     "    </script>\n",
     "</body>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "In this notebook we explored:\n",
+    "1. Some history of time and where AM and PM comes from\n",
+    "2. The relationships between the different units of time and how the behave together\n",
+    "3. Examples of tools to use the time in different ways (Time for a sports game)\n",
+    "4. How to use the 24-hour clock"
    ]
   },
   {
