--- a/Vincent/CC-207 Frogs on a Log Puzzle/FrogsOnALog.ipynb
+++ b/Vincent/CC-207 Frogs on a Log Puzzle/FrogsOnALog.ipynb
@@ -2,392 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "  <style>\n",
-       "    .canvas {\n",
-       "      z-index: 99;\n",
-       "    }\n",
-       "    \n",
-       "    .frog {\n",
-       "      display: inline-block;\n",
-       "      width: 10vw;\n",
-       "      padding: 0 .5em;\n",
-       "    } \n",
-       "    \n",
-       "    li img {\n",
-       "      width: 100%;\n",
-       "    }\n",
-       "    \n",
-       "    .clickable {\n",
-       "      cursor: pointer;\n",
-       "    }\n",
-       "\n",
-       "    .canvas ul {\n",
-       "      position: relative;\n",
-       "      text-align: center;\n",
-       "      padding-top: 25vw;\n",
-       "      min-width: 700px;\n",
-       "    }\n",
-       "    \n",
-       "    .backgroundImg {\n",
-       "#       position: fixed;\n",
-       "      width: 100vw;\n",
-       "      height: auto;\n",
-       "#       z-index: -1;\n",
-       "    }\n",
-       "\n",
-       "    .buttons button {\n",
-       "      padding: 10px 15px;\n",
-       "      border-radius: 30px;\n",
-       "      background: green;\n",
-       "      border: none;\n",
-       "      font-size: 2em;\n",
-       "      cursor: pointer;\n",
-       "      margin: 5px;\n",
-       "    }\n",
-       "\n",
-       "    .buttons button:hover {\n",
-       "      background: lightgreen;\n",
-       "    }\n",
-       "\n",
-       "    .buttons {\n",
-       "      margin: 6vw;\n",
-       "    }    \n",
-       "  </style>\n",
-       "  <div>\n",
-       "    <img class=\"backgroundImg\" src=\"imgs/background.jpg\" alt=\"\">\n",
-       "  </div>\n",
-       "\n",
-       "  <div class=\"canvas\">\n",
-       "    <ul id=\"frogList\">\n",
-       "      <li class=\"frog\" id=\"pos0\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
-       "      <li class=\"frog\" id=\"pos1\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
-       "      <li class=\"frog\" id=\"pos2\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
-       "      <li class=\"frog\" id=\"pos3\"><img src=\"imgs/blankSpace.png\" alt=\"\"></li>\n",
-       "      <li class=\"frog\" id=\"pos4\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
-       "      <li class=\"frog\" id=\"pos5\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
-       "      <li class=\"frog\" id=\"pos6\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
-       "    </ul>\n",
-       "  </div>\n",
-       "  <div class=\"buttons\">\n",
-       "    <button onclick=\"resetFrogs()\">Reset</button>\n",
-       "    <button onclick=\"undo()\">Undo</button>\n",
-       "  </div>\n",
-       "\n",
-       "  <script>\n",
-       "    var FROG = {\n",
-       "      green: {\n",
-       "        color: 'green',\n",
-       "        img: 'imgs/frogGreen.png'\n",
-       "      },\n",
-       "      red: {\n",
-       "        color: 'red',\n",
-       "        img: 'imgs/frogRed.png'\n",
-       "      }\n",
-       "    };\n",
-       "\n",
-       "    var BLANK_SPACE = \"blank\";\n",
-       "    var START_ARRAY = [FROG.red.color, FROG.red.color, FROG.red.color, BLANK_SPACE, FROG.green.color, FROG.green.color,\n",
-       "      FROG.green.color\n",
-       "    ];\n",
-       "\n",
-       "    var posArray = START_ARRAY.slice();\n",
-       "    var prevArray = [];\n",
-       "    prevArray.push(START_ARRAY.slice());\n",
-       "\n",
-       "    $('.frog').click(function () {\n",
-       "      var pos = $(this).index();\n",
-       "      makeMove(pos);\n",
-       "    });\n",
-       "\n",
-       "    function displayFrogs() {\n",
-       "      for (var i = 0; i < posArray.length; i++) {\n",
-       "        if (posArray[i] == FROG.red.color) {\n",
-       "          $('#pos' + i).html('<img class=\"clickable\"src = \"' + FROG.red.img + '\"alt = \"red frog\" > ');\n",
-       "          }\n",
-       "          else if (posArray[i] == FROG.green.color) {\n",
-       "            $('#pos' + i).html('<img class=\"clickable\" src=\"' + FROG.green.img + '\" alt=\"green frog\">');\n",
-       "          } else {\n",
-       "            $('#pos' + i).html('<img src=\"imgs/blankSpace.png\" alt=\"\">');\n",
-       "          }\n",
-       "        }\n",
-       "      }\n",
-       "\n",
-       "      function makeMove(index) {\n",
-       "        if (!compareArrays(prevArray[prevArray.length - 1], posArray))\n",
-       "          prevArray.push(posArray.slice());\n",
-       "        switch (posArray[index]) {\n",
-       "          case FROG.red.color:\n",
-       "            if (posArray[index + 1] == BLANK_SPACE) {\n",
-       "              posArray[index + 1] = FROG.red.color;\n",
-       "              posArray[index] = BLANK_SPACE;\n",
-       "            } else if (posArray[index + 2] == BLANK_SPACE) {\n",
-       "              posArray[index + 2] = FROG.red.color;\n",
-       "              posArray[index] = BLANK_SPACE;\n",
-       "            }\n",
-       "            break;\n",
-       "          case FROG.green.color:\n",
-       "            if (posArray[index - 1] == BLANK_SPACE) {\n",
-       "              posArray[index - 1] = FROG.green.color;\n",
-       "              posArray[index] = BLANK_SPACE;\n",
-       "            } else if (posArray[index - 2] == BLANK_SPACE) {\n",
-       "              posArray[index - 2] = FROG.green.color;\n",
-       "              posArray[index] = BLANK_SPACE;\n",
-       "            }\n",
-       "            break;\n",
-       "        };\n",
-       "        displayFrogs();\n",
-       "      }\n",
-       "\n",
-       "      function resetFrogs() {\n",
-       "        posArray = START_ARRAY.slice();\n",
-       "        prevArray = [];\n",
-       "        prevArray.push(START_ARRAY.slice());\n",
-       "        displayFrogs();\n",
-       "      }\n",
-       "\n",
-       "      function compareArrays(x, y) {\n",
-       "        if (x.length != y.length)\n",
-       "          return false;\n",
-       "        for (var i = 0; i < x.length; i++) {\n",
-       "          if (x[i] != y[i]) return false;\n",
-       "        }\n",
-       "        return true;\n",
-       "      }\n",
-       "\n",
-       "      function undo() {\n",
-       "        if (prevArray[prevArray.length - 1] != null) {\n",
-       "          if (compareArrays(prevArray[prevArray.length - 1], posArray) &&\n",
-       "            prevArray.length > 1) {\n",
-       "            prevArray.pop();\n",
-       "          }\n",
-       "          posArray = prevArray[prevArray.length - 1].slice();\n",
-       "          if (prevArray.length > 1) {\n",
-       "            prevArray.pop();\n",
-       "          }\n",
-       "        }\n",
-       "        displayFrogs();\n",
-       "      }\n",
-       "  </script>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "%%html\n",
-    "  <style>\n",
-    "    .canvas {\n",
-    "      z-index: 99;\n",
-    "    }\n",
-    "    \n",
-    "    .frog {\n",
-    "      display: inline-block;\n",
-    "      width: 10vw;\n",
-    "      padding: 0 .5em;\n",
-    "    } \n",
-    "    \n",
-    "    li img {\n",
-    "      width: 100%;\n",
-    "    }\n",
-    "    \n",
-    "    .clickable {\n",
-    "      cursor: pointer;\n",
-    "    }\n",
+    "<link rel=\"stylesheet\" href=\"style.css\">\n",
+    "    <div class=\"mainGrid\">\n",
+    "        <ul id=\"frogList\" class=\"frogGrid\">\n",
+    "            <li class=\"frog\" id=\"pos0\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
+    "            <li class=\"frog\" id=\"pos1\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
+    "            <li class=\"frog\" id=\"pos2\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
+    "            <li class=\"frog\" id=\"pos3\"><img src=\"imgs/blankSpace.png\" alt=\"\"></li>\n",
+    "            <li class=\"frog\" id=\"pos4\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
+    "            <li class=\"frog\" id=\"pos5\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
+    "            <li class=\"frog\" id=\"pos6\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
+    "            <li class=\"btns\" onclick=\"resetFrogs()\"><span>Reset</span></li>\n",
+    "            <li class=\"btns\" onclick=\"undo()\"><span>Undo</span></li>\n",
+    "        </ul>\n",
+    "    </div>\n",
     "\n",
-    "    .canvas ul {\n",
-    "      position: relative;\n",
-    "      text-align: center;\n",
-    "      padding-top: 25vw;\n",
-    "      min-width: 700px;\n",
-    "    }\n",
-    "    \n",
-    "    .backgroundImg {\n",
-    "#       position: fixed;\n",
-    "      width: 100vw;\n",
-    "      height: auto;\n",
-    "#       z-index: -1;\n",
-    "    }\n",
-    "\n",
-    "    .buttons button {\n",
-    "      padding: 10px 15px;\n",
-    "      border-radius: 30px;\n",
-    "      background: green;\n",
-    "      border: none;\n",
-    "      font-size: 2em;\n",
-    "      cursor: pointer;\n",
-    "      margin: 5px;\n",
-    "    }\n",
-    "\n",
-    "    .buttons button:hover {\n",
-    "      background: lightgreen;\n",
-    "    }\n",
-    "\n",
-    "    .buttons {\n",
-    "      margin: 6vw;\n",
-    "    }    \n",
-    "  </style>\n",
-    "  <div>\n",
-    "    <img class=\"backgroundImg\" src=\"imgs/background.jpg\" alt=\"\">\n",
-    "  </div>\n",
-    "\n",
-    "  <div class=\"canvas\">\n",
-    "    <ul id=\"frogList\">\n",
-    "      <li class=\"frog\" id=\"pos0\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
-    "      <li class=\"frog\" id=\"pos1\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
-    "      <li class=\"frog\" id=\"pos2\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
-    "      <li class=\"frog\" id=\"pos3\"><img src=\"imgs/blankSpace.png\" alt=\"\"></li>\n",
-    "      <li class=\"frog\" id=\"pos4\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
-    "      <li class=\"frog\" id=\"pos5\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
-    "      <li class=\"frog\" id=\"pos6\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
-    "    </ul>\n",
-    "  </div>\n",
-    "  <div class=\"buttons\">\n",
-    "    <button onclick=\"resetFrogs()\">Reset</button>\n",
-    "    <button onclick=\"undo()\">Undo</button>\n",
-    "  </div>\n",
-    "\n",
-    "  <script>\n",
-    "    var FROG = {\n",
-    "      green: {\n",
-    "        color: 'green',\n",
-    "        img: 'imgs/frogGreen.png'\n",
-    "      },\n",
-    "      red: {\n",
-    "        color: 'red',\n",
-    "        img: 'imgs/frogRed.png'\n",
-    "      }\n",
-    "    };\n",
-    "\n",
-    "    var BLANK_SPACE = \"blank\";\n",
-    "    var START_ARRAY = [FROG.red.color, FROG.red.color, FROG.red.color, BLANK_SPACE, FROG.green.color, FROG.green.color,\n",
-    "      FROG.green.color\n",
-    "    ];\n",
-    "\n",
-    "    var posArray = START_ARRAY.slice();\n",
-    "    var prevArray = [];\n",
-    "    prevArray.push(START_ARRAY.slice());\n",
-    "\n",
-    "    $('.frog').click(function () {\n",
-    "      var pos = $(this).index();\n",
-    "      makeMove(pos);\n",
-    "    });\n",
-    "\n",
-    "    function displayFrogs() {\n",
-    "      for (var i = 0; i < posArray.length; i++) {\n",
-    "        if (posArray[i] == FROG.red.color) {\n",
-    "          $('#pos' + i).html('<img class=\"clickable\"src = \"' + FROG.red.img + '\"alt = \"red frog\" > ');\n",
-    "          }\n",
-    "          else if (posArray[i] == FROG.green.color) {\n",
-    "            $('#pos' + i).html('<img class=\"clickable\" src=\"' + FROG.green.img + '\" alt=\"green frog\">');\n",
-    "          } else {\n",
-    "            $('#pos' + i).html('<img src=\"imgs/blankSpace.png\" alt=\"\">');\n",
-    "          }\n",
-    "        }\n",
-    "      }\n",
-    "\n",
-    "      function makeMove(index) {\n",
-    "        if (!compareArrays(prevArray[prevArray.length - 1], posArray))\n",
-    "          prevArray.push(posArray.slice());\n",
-    "        switch (posArray[index]) {\n",
-    "          case FROG.red.color:\n",
-    "            if (posArray[index + 1] == BLANK_SPACE) {\n",
-    "              posArray[index + 1] = FROG.red.color;\n",
-    "              posArray[index] = BLANK_SPACE;\n",
-    "            } else if (posArray[index + 2] == BLANK_SPACE) {\n",
-    "              posArray[index + 2] = FROG.red.color;\n",
-    "              posArray[index] = BLANK_SPACE;\n",
-    "            }\n",
-    "            break;\n",
-    "          case FROG.green.color:\n",
-    "            if (posArray[index - 1] == BLANK_SPACE) {\n",
-    "              posArray[index - 1] = FROG.green.color;\n",
-    "              posArray[index] = BLANK_SPACE;\n",
-    "            } else if (posArray[index - 2] == BLANK_SPACE) {\n",
-    "              posArray[index - 2] = FROG.green.color;\n",
-    "              posArray[index] = BLANK_SPACE;\n",
-    "            }\n",
-    "            break;\n",
-    "        };\n",
-    "        displayFrogs();\n",
-    "      }\n",
-    "\n",
-    "      function resetFrogs() {\n",
-    "        posArray = START_ARRAY.slice();\n",
-    "        prevArray = [];\n",
-    "        prevArray.push(START_ARRAY.slice());\n",
-    "        displayFrogs();\n",
-    "      }\n",
-    "\n",
-    "      function compareArrays(x, y) {\n",
-    "        if (x.length != y.length)\n",
-    "          return false;\n",
-    "        for (var i = 0; i < x.length; i++) {\n",
-    "          if (x[i] != y[i]) return false;\n",
-    "        }\n",
-    "        return true;\n",
-    "      }\n",
-    "\n",
-    "      function undo() {\n",
-    "        if (prevArray[prevArray.length - 1] != null) {\n",
-    "          if (compareArrays(prevArray[prevArray.length - 1], posArray) &&\n",
-    "            prevArray.length > 1) {\n",
-    "            prevArray.pop();\n",
-    "          }\n",
-    "          posArray = prevArray[prevArray.length - 1].slice();\n",
-    "          if (prevArray.length > 1) {\n",
-    "            prevArray.pop();\n",
-    "          }\n",
-    "        }\n",
-    "        displayFrogs();\n",
-    "      }\n",
-    "  </script>\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "    .puzzleFrame {\n",
-       "        width: 100%;\n",
-       "        height: 550px;\n",
-       "    }\n",
-       "</style>\n",
-       "\n",
-       "<iframe class=\"puzzleFrame\" src=\"PuzzleSite/index.html\"></iframe>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%html\n",
-    "<style>\n",
-    "    .puzzleFrame {\n",
-    "        width: 100%;\n",
-    "        height: 550px;\n",
-    "    }\n",
-    "</style>\n",
-    "\n",
-    "<iframe class=\"puzzleFrame\" src=\"PuzzleSite/index.html\"></iframe>"
+    "    <script src=\"https://code.jquery.com/jquery-3.3.1.slim.min.js\" integrity=\"sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=\"\n",
+    "        crossorigin=\"anonymous\"></script>\n",
+    "    <script src=\"main.js\"></script>"
    ]
   },
   {
