Added a move counter, cleaned up some files

--- a/Vincent/CC-207 Frogs on a Log Puzzle/FrogsOnALog.ipynb
+++ b/Vincent/CC-207 Frogs on a Log Puzzle/FrogsOnALog.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![logo](https://callysto.ca/wp-content/uploads/2018/06/Callysto_Notebook-Banner_Top_06.06.18.jpg)](https://callysto.ca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import myMagics\n",
+    "%uiButtons"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -21,6 +38,7 @@
     "            <li class=\"frog\" id=\"pos6\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
     "            <li class=\"btns\" onclick=\"resetFrogs()\"><span>Reset</span></li>\n",
     "            <li class=\"btns\" onclick=\"undo()\"><span>Undo</span></li>\n",
+    "            <li class=\"moveCounter\">Your moves: <span id=\"counter\">0</span></li>\n",
     "        </ul>\n",
     "    </div>\n",
     "\n",
@@ -30,11 +48,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[![logo](https://callysto.ca/wp-content/uploads/2018/07/Callysto-Notebook-Banner_Bottom_07.30.18.jpg)](https://callysto.ca/)"
+   ]
   }
  ],
  "metadata": {
